--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,4 @@
 @import './bootstrap/bootstrap';
 @import './fonts';
 @import './variables';
-@import '~@steroidsjs/bootstrap';
+// @import '~@steroidsjs/bootstrap';
