--- a/src/routes/DocsPage/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/DemoCard/DemoCard.scss
@@ -6,7 +6,7 @@
     border: 2px dashed #7B61FF;
     border-radius: 30px;
 
-    .header {
+    &__header {
         display: flex;
         justify-content: space-between;
         align-items: center;
