--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -12,7 +12,7 @@
     font-family: 'Nunito';
     src: url('../../public/fonts/Nunito/Nunito-ExtraBold.woff2') format('woff2'),
         url('../../public/fonts/Nunito/Nunito-ExtraBold.woff') format('woff');
-    font-weight: bold;
+    font-weight: 800;
     font-style: normal;
     font-display: swap;
 }
@@ -21,7 +21,7 @@
     font-family: 'Nunito';
     src: url('../../public/fonts/Nunito/Nunito-Bold.woff2') format('woff2'),
         url('../../public/fonts/Nunito/Nunito-Bold.woff') format('woff');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
@@ -39,7 +39,7 @@
     font-family: 'Nunito';
     src: url('../../public/fonts/Nunito/Nunito-Regular.woff2') format('woff2'),
         url('../../public/fonts/Nunito/Nunito-Regular.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
