--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,4 @@
 @import '~bootstrap/scss/functions';
 @import './bootstrap/custom-variables';
 @import '~bootstrap/scss/variables';
+@import '@steroidsjs/bootstrap/scss/variables/index';
