Fix dark themes

--- a/src/shared/Layout/Layout.scss
+++ b/src/shared/Layout/Layout.scss
@@ -1,7 +1,5 @@
 @import 'style/variables';
 
 .Layout {
-  .HeaderView__logo-image svg {
-    width: 20px;
-  }
+  background-color: $background-color;
 }
