Fix typography styles

--- a/src/routes/DocsPage/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/DemoCard/DemoCard.scss
@@ -12,6 +12,10 @@
         align-items: center;
     }
 
+    &__title {
+      margin-bottom: 16px;
+    }
+
     &__description {
         margin-bottom: 3em;
     }
