--- a/src/routes/DocsPage/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/DemoCard/DemoCard.scss
@@ -1,3 +1,5 @@
+@import '~@steroidsjs/bootstrap/scss/variables/common/colors.scss';
+
 .DemoCard {
     margin: 2em;
     padding: 2em;
@@ -18,5 +20,9 @@
 
     &__description {
         margin-bottom: 3em;
+    }
+
+    &__link { 
+        color: $text-color;
     }
 }
