--- a/src/routes/DocsPage/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/DemoCard/DemoCard.scss
@@ -1,7 +1,6 @@
-@import '~@steroidsjs/bootstrap/scss/variables/common/colors.scss';
+@import 'style/variables';
 
 .DemoCard {
-    margin: 2em;
     padding: 2em;
     min-width: 30%;
 
