--- a/src/routes/DocsPage/views/Demos/Demos.scss
+++ b/src/routes/DocsPage/views/Demos/Demos.scss
@@ -1,9 +1,15 @@
 .Demos {
     padding: 30px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+
+    &__cards {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      column-gap: 3em;
+      row-gap: 3em;
+      margin-bottom: 30px;
+    }
 
     &__table {
       margin-bottom: 50px;
