--- a/src/ui/list/List/demo/list.scss
+++ b/src/ui/list/List/demo/list.scss
@@ -4,7 +4,7 @@
 
     &-item { 
         padding: 5px 10px;
-        border-bottom: 1px solid $border-color;
+        border-bottom: 1px solid $element-border-color;
 
         &:last-child{
             border: none;
