--- a/src/shared/Layout/Layout.scss
+++ b/src/shared/Layout/Layout.scss
@@ -1,6 +1,6 @@
 @import 'style/variables';
 
 .Layout {
-  background-color: $background-color;
+  background-color: $element-background-color;
   min-height: 100vh;
 }
