--- a/src/routes/IndexPage/IndexPage.scss
+++ b/src/routes/IndexPage/IndexPage.scss
@@ -1,32 +1,76 @@
-@import 'style/variables';
+@import "style/variables";
 
 .IndexPage {
-  &__centered {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    height: calc(100vh - 56px);
-  }
+    &__hero {
+        padding-top: 264px;
+        padding-bottom: 351px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
 
-  &__title {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    line-height: 1;
-    font-family: 'Merriweather', serif;
-    font-weight: 700;
-    max-width: 480px;
-    font-size: 3rem;
-    margin-right: 20px;
-  }
-  
-  &__image {
-    img {
-      width: 100%;
-      max-width: 700px;
+        &-title {
+            margin-top: 21px;
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            margin-bottom: 28px;
+
+            &-letters {
+                font-size: $font-size-96;
+                font-weight: 700;
+                line-height: $line-height-112;
+
+                &:first-child {
+                    transform: translateX(-8px) translateY(1px);
+                }
+
+                &:last-child {
+                    transform: translateX(7px) translateY(1px);
+                }
+            }
+
+            &-icon {
+                width: 115px;
+                height: 115px;
+
+                transform: scale(1.42) translateX(-9px) translateY(3px);
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+
+        &-buttons {
+            display: flex;
+            flex-flow: row nowrap;
+            column-gap: 16px;
+            margin-bottom: 64px;
+
+            .ButtonView {
+                width: 190px;
+                height: 56px;
+                padding: 12px;
+
+                &__text {
+                    font-size: 18px;
+                    font-family: Nunito;
+                    white-space: nowrap;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24px;
+                }
+            }
+        }
+
+        &-descr {
+            width: 46.66vw;
+            text-align: center;
+
+            font-size: $font-size-24;
+            font-weight: $font-weight-sm;
+            line-height: $line-height-34;
+        }
     }
-  }
 }
