--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -1,26 +1,97 @@
-@import 'style/variables';
+@import "style/variables";
 
 .Header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: $gray;
-
-  &__left {
+    padding: 0 16px;
     display: flex;
+    flex-flow: row nowrap;
     align-items: center;
-  }
+    justify-content: space-between;
+    height: auto !important;
+    background-color: $element-background-color;
 
-  &__logo {
-    margin-right: 50px;
-  }
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
-  &__link {
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
-    color: $primary;
-    text-decoration: underline;
-  }
+    &__logo {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        gap: 8px;
+        cursor: pointer;
+
+        &-icon {
+
+            svg { 
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &-title {
+            font-size: $font-size-20;
+            font-weight: $font-weight-sm;
+            line-height: $line-height-32;
+        }
+    }
+
+    &__controls {
+        display: flex;
+        align-items: center;
+
+        .FieldLayoutView {
+            margin-bottom: 0;
+        }
+
+        &-input {
+            width: 48px !important;
+            height: 48px;
+            margin-right: 16px;
+
+            .IconView.InputFieldView__lead-icon {
+                left: auto;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                svg {
+                    path,
+                    circle {
+                        stroke: $graphite;
+                    }
+                }
+            }
+
+            .InputFieldView__input {
+                padding: 0;
+                background-color: $light-gray;
+                border: none;
+            }
+        }
+
+        &-themes {
+            margin-right: 4px;
+        }
+
+        &-lang {
+            width: 59px !important;
+            min-width: auto;
+
+            .DropDownFieldView__selected-items {
+                padding: 5px 6px;
+                padding-right: 0;
+
+                span {
+                    padding: 0;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
+            .IconView {
+                width: 24px;
+                height: 24px;
+            }
+        }
+    }
 }
