--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,3 @@
-@import '@steroidsjs/bootstrap/scss/variables/index';
-
-$color-purple: #932981;
+@import './customVariables';
+@import '~@steroidsjs/bootstrap/scss/variables';
+@import '~@steroidsjs/bootstrap/scss/mixins';
