--- a/src/style/customVariables/colors.scss
+++ b/src/style/customVariables/colors.scss
@@ -1,2 +1,9 @@
 $grayF8: #F8F8F8;
 $grayF0: #F0F0F0;
+$grayF9: #F9F9F9;
+$grayD3: #D3D3D3;
+
+$black1D: #1D1F24;
+
+$border-color-first: #EDF0F1;
+$border-color-second: #16171B;
