--- a/src/ui/index.scss
+++ b/src/ui/index.scss
@@ -67,3 +67,5 @@
 @import '@steroidsjs/bootstrap/nav/Tree/TreeView';
 @import '@steroidsjs/bootstrap/typography/Text/TextView';
 @import '@steroidsjs/bootstrap/typography/Title/TitleView';
+@import '@steroidsjs/bootstrap/nav/ButtonGroup/ButtonGroupView';
+
