--- a/src/style/customVariables/typography.scss
+++ b/src/style/customVariables/typography.scss
@@ -19,6 +19,7 @@ $line-height-30: 1.875rem;
 $line-height-34: 2.125rem;
 $line-height-32: 2rem;
 $line-height-38: 2.375rem;
+$line-height-40: 2.5rem;
 $line-height-54: 3.375rem;
 $line-height-57: 3.5625rem;
 $line-height-72: 4.5rem;
