--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
@@ -7,22 +7,28 @@
     border-radius: 20px;
     padding: 24px;
     background-color: $white;
-    border: 4px solid rgba(#000000, 0.2);
-
+    border-radius: 20px;
+    box-shadow:
+        0px 0px 0px 0px rgba(69, 56, 98, 0.05),
+        -2px 20px 45px 0px rgba(69, 56, 98, 0.05),
+        -7px 81px 81px 0px rgba(69, 56, 98, 0.04),
+        -16px 182px 110px 0px rgba(69, 56, 98, 0.03),
+        -29px 324px 130px 0px rgba(69, 56, 98, 0.01),
+        -46px 506px 142px 0px rgba(69, 56, 98, 0);
 
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
 
-    &__themes { 
+    &__themes {
         position: absolute;
         top: 24px;
-        left: 50%; 
+        left: 50%;
         transform: translateX(-50%);
     }
 
-    &__component { 
+    &__component {
         margin-top: 24px;
     }
 }
