--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -19,8 +19,7 @@
         cursor: pointer;
 
         &-icon {
-
-            svg { 
+            svg {
                 width: 100%;
                 height: 100%;
             }
@@ -41,16 +40,21 @@
             margin-bottom: 0;
         }
 
-        &-input {
-            width: 48px !important;
+        .InputFieldView {
+            width: 48px;
             height: 48px;
+        }
+
+        &-input {
+            width: 100%;
+            height: 100%;
             margin-right: 16px;
 
             .IconView.InputFieldView__lead-icon {
                 left: auto;
                 top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                right: 12px;
+                transform: translateY(-50%);
                 svg {
                     path,
                     circle {
@@ -60,7 +64,7 @@
             }
 
             .InputFieldView__input {
-                padding: 0;
+                padding-left: 12px;
                 background-color: $light-gray;
                 border: none;
             }
@@ -73,6 +77,11 @@
         &-lang {
             width: 59px !important;
             min-width: auto;
+            border-radius: 12px;
+
+            &::before { 
+                border-radius: 16px;
+            }
 
             .DropDownFieldView__selected-items {
                 padding: 5px 6px;
@@ -85,12 +94,24 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+
+                    font-size: $font-size-18;
+                    line-height: $line-height-22;
+                }
+            }
+
+            .DropDownFieldView__drop-down {
+                border-radius: 8px;
+
+                .DropDownItemView__option {
+                    padding-left: 2px;
                 }
             }
 
             .IconView {
-                width: 24px;
-                height: 24px;
+                svg {
+                    transform: scale(0.8) translateY(1px) translateX(1px);
+                }
             }
         }
     }
