--- a/src/ui/index.scss
+++ b/src/ui/index.scss
@@ -1,3 +1,4 @@
+@import '@steroidsjs/bootstrap/scss/normalize';
 @import '@steroidsjs/bootstrap/scss/variables';
 @import '@steroidsjs/bootstrap/scss/mixins';
 @import '@steroidsjs/bootstrap/scss/fonts';
