--- a/src/shared/Layout/Layout.scss
+++ b/src/shared/Layout/Layout.scss
@@ -1,6 +1,21 @@
 @import 'style/variables';
 
 .Layout {
-  background-color: $element-background-color;
-  min-height: 100vh;
+    background-color: $element-background-color;
+    display: flex;
+    flex-flow: column nowrap;
+    min-height: 100vh;
+
+    header {
+		flex: 0 0 auto;
+	}
+
+	main {
+		flex: 1 0 auto;
+	}
+
+	footer {
+		flex: 0 0 auto;
+	}
 }
+
