--- a/src/routes/IndexPage/views/ExampleCard/ExampleCard.scss
+++ b/src/routes/IndexPage/views/ExampleCard/ExampleCard.scss
@@ -7,7 +7,7 @@
     flex-flow: column nowrap;
     align-items: center;
     padding: 32px;
-    background-color: $grayF9;
+    background-color: $custom-background-color-f9;
     border-radius: 20px;
     height: 530px;
     min-width: 21.5104vw;
