--- a/src/routes/IndexPage/views/AdvantageCard/AdvantageCard.scss
+++ b/src/routes/IndexPage/views/AdvantageCard/AdvantageCard.scss
@@ -8,7 +8,7 @@
         margin-bottom: 16px;
         height: 240px;
         border-radius: 20px;
-        background-color: $grayF9;
+        background-color: $custom-background-color-f9;
         overflow: hidden;
 
         img {
@@ -22,5 +22,6 @@
         text-align: center;
         margin-bottom: 0;
         opacity: 0.6;
+        color: $custom-text-decr-color;
     }
 }
