--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
@@ -6,7 +6,7 @@
     width: 47.9166vw;
     border-radius: 20px;
     padding: 24px;
-    background-color: $white;
+    background-color: $custom-background-color;
     border-radius: 20px;
     box-shadow:
         0px 0px 0px 0px rgba(69, 56, 98, 0.05),
@@ -26,6 +26,16 @@
         top: 24px;
         left: 50%;
         transform: translateX(-50%);
+
+        .ButtonGroupView__button_default .IconView svg path,
+        rect,
+        circle {
+            stroke: $custom-icon-color;
+        }
+
+        .ButtonGroupView__button_active .IconView svg, path, rect, circle { 
+            stroke: $custom-icon-active;
+        }
     }
 
     &__component {
