--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentSelector/ComponentSelector.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentSelector/ComponentSelector.scss
@@ -20,7 +20,7 @@
         padding: 0;
 
         .ButtonView .ButtonView__link .ButtonView__text {
-            color: $black;
+            color: $custom-text-color;
             font-size: $font-size-24;
             font-weight: $font-weight-sm;
             line-height: $line-height-34;
