--- a/src/shared/Footer/Footer.scss
+++ b/src/shared/Footer/Footer.scss
@@ -1,18 +1,31 @@
 @import "style/variables";
 
+:root { 
+    --footer-background-color: #F8F8F8;
+    --footer-separator-color: #f0f0f0;
+}
+
+html[data-theme="dark"] { 
+    --footer-background-color: #23232C;
+    --footer-separator-color: transparent;
+}
+
+$footer-background-color: var(--footer-background-color);
+$footer-separator-color: var(--footer-separator-color);
+
 %fontTemplate {
     font-size: $font-size-18;
     font-weight: $font-weight-sm;
     line-height: $line-height-22;
-    color: $black-60;
+    color: $custom-text-decr-color;
 }
 
 .Footer {
+    $root: &;
     overflow: hidden;
     position: relative;
-    $root: &;
     padding: 64px 32px 24px 32px;
-    background: $grayF8;
+    background: $footer-background-color;
     @extend %fontTemplate;
 
     small {
@@ -73,6 +86,6 @@
         left: 0;
         width: 100%;
         height: 1px;
-        background-color: $grayF0;
+        background-color: $footer-separator-color;
     }
 }
