--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -1,5 +1,15 @@
 @import "style/variables";
 
+:root {
+    --control-background-color: #f1f5f7;
+}
+
+html[data-theme="dark"] {
+    --control-background-color: #333646;
+}
+
+$control-background-color: var(--control-background-color);
+
 .Header {
     padding: 0 16px;
     display: flex;
@@ -7,7 +17,7 @@
     align-items: center;
     justify-content: space-between;
     height: auto !important;
-    background-color: $element-background-color;
+    background-color: $custom-background-color;
 
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
@@ -29,6 +39,7 @@
             font-size: $font-size-20;
             font-weight: $font-weight-sm;
             line-height: $line-height-32;
+            color: $custom-text-color;
         }
     }
 
@@ -58,20 +69,33 @@
                 svg {
                     path,
                     circle {
-                        stroke: $graphite;
+                        stroke: $custom-icon-color;
                     }
                 }
             }
 
             .InputFieldView__input {
                 padding-left: 12px;
-                background-color: $light-gray;
+                background-color: $control-background-color;
                 border: none;
             }
         }
 
         &-themes {
             margin-right: 4px;
+            background-color: $control-background-color;
+
+            .ButtonGroupView__button:not(.ButtonGroupView__button_active) .IconView svg path,
+            rect,
+            circle {
+                stroke: $custom-icon-color;
+            }
+
+            .ButtonGroupView__button_active .IconView svg path,
+            rect,
+            circle {
+                stroke: $custom-icon-active;
+            }
         }
 
         &-lang {
@@ -79,7 +103,7 @@
             min-width: auto;
             border-radius: 12px;
 
-            &::before { 
+            &::before {
                 border-radius: 16px;
             }
 
