--- a/src/routes/IndexPage/views/AnimatedIcons/AnimatedIcons.scss
+++ b/src/routes/IndexPage/views/AnimatedIcons/AnimatedIcons.scss
@@ -3,16 +3,23 @@
 .AnimatedIcons {
     position: absolute;
     pointer-events: none;
+    overflow: hidden;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+
+    @media (max-width: 524px) {
+        display: none;
+    }
 
     &__item {
         position: absolute;
         display: block;
         width: 65px;
         height: 65px;
+
+        transition: opacity 150ms ease-in-out;
 
         svg {
             width: 100%;
@@ -22,46 +29,141 @@
         &:nth-child(1) {
             top: 9.6%;
             left: 13.7%;
+
+            @media (max-width: $tablet-width) {
+                top: 13.7%;
+                left: 14.7%;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 8.7%;
+                left: 7.4%;
+            }
         }
         &:nth-child(2) {
             top: 8.8%;
             left: 65.2%;
             transform: rotate(9deg);
+
+            @media (max-width: $tablet-width) {
+                top: 12.5%;
+                left: 67.6%;
+                transform: rotate(9deg);
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 10.2%;
+                left: 50.3%;
+                transform: rotate(10deg);
+            }
         }
 
         &:nth-child(3) {
             top: 8.3%;
             left: 90.8%;
             transform: scale(1.23);
+
+            @media (max-width: $tablet-width) {
+                top: 11.9%;
+                left: 93.7%;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 11.5%;
+                left: 92.4%;
+            }
         }
 
         &:nth-child(4) {
             top: 33.2%;
             left: 21.4%;
             transform: scale(1.95);
+
+            @media (max-width: $tablet-width) {
+                top: 47.3%;
+                left: 23.7%;
+            }
+
+            @media (max-width: 1018px) {
+                left: 18%;
+            }
+            @media (max-width: 820px) {
+                left: 14%;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 51.7%;
+                left: 8.5%;
+            }
+
+            @media (max-width: 662px) {
+                top: 48%;
+            }
+
+            @media (max-width: 580px) {
+                left: 2%;
+            }
         }
 
         &:nth-child(5) {
             top: 24.6%;
             left: 81.3%;
             transform: scale(1.4);
+
+            @media (max-width: $tablet-width) {
+                top: 35.2%;
+                left: 81.3%;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 38.5%;
+                left: 81.4%;
+            }
+
+            @media (max-width: 634px) {
+                left: 88%;
+            }
         }
 
         &:nth-child(6) {
             top: 74.2%;
             left: 22.6%;
             transform: scale(1.25);
+
+            @media (max-width: $tablet-width) {
+                opacity: 0;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                opacity: 1;
+                top: 87.2%;
+                left: 13.7%;
+            }
         }
 
         &:nth-child(7) {
             top: 68.7%;
             left: 80.7%;
+
+            @media (max-width: $tablet-width) {
+                top: 81%;
+                left: 84.2%;
+            }
+
+            @media (max-width: $tablet-width-small) {
+                top: 83.8%;
+                left: 83%;
+            }
         }
 
         &:nth-child(8) {
             top: 79.3%;
             left: 91.7%;
             transform: scale(1.23);
+
+            @media (max-width: $tablet-width) {
+                opacity: 0;
+            }
         }
     }
 }
