--- a/src/routes/IndexPage/views/CreateCard/CreateCard.scss
+++ b/src/routes/IndexPage/views/CreateCard/CreateCard.scss
@@ -1,11 +1,11 @@
 @import "style/variables";
 
-:root { 
-    --create-card-background-color: #FFFFFF;
+:root {
+    --create-card-background-color: #ffffff;
 }
 
-html[data-theme="dark"] { 
-    --create-card-background-color: #272A37;
+html[data-theme="dark"] {
+    --create-card-background-color: #272a37;
 }
 
 $create-card-background-color: var(--create-card-background-color);
@@ -14,29 +14,52 @@ $create-card-background-color: var(--create-card-background-color);
     border-radius: 20px;
     background-color: $create-card-background-color;
 
-    .CardView {
-        &__cover {
-            padding: 16px 16px 0 16px;
-            height: 220px;
+    align-items: center;
+    padding: 16px;
 
-            img {
-                border-radius: 8px;
-            }
+    @media (max-width: $mobile-width-small) {
+        padding: 8px;
+        height: 302px !important;
+    }
+
+    .CardView__content {
+        width: 100%;
+        padding: 0;
+        padding-top: 16px;
+    }
+
+    .CardView__cover {
+        height: 220px;
+        border-radius: 8px;
+
+        @media (max-width: $mobile-width-small) {
+            height: 180px;
         }
+    }
 
-        &__title {
-            font-size: $font-size-24;
-            font-weight: $font-weight-sm;
-            line-height: $line-height-34;
-            margin-bottom: 16px;
-            color: $custom-text-color;
+    .CardView__title {
+        font-size: $font-size-24;
+        font-weight: $font-weight-sm;
+        line-height: $line-height-34;
+        margin-bottom: 16px;
+        color: $custom-text-color;
+
+        @media (max-width: $mobile-width-small) {
+            font-size: $font-size-14;
+            line-height: $line-height-18;
         }
+    }
 
-        &__description {
-            font-size: $font-size-16;
-            font-weight: $font-weight-sm;
-            line-height: $line-height-22;
-            color: $custom-text-decr-color;            
+    .CardView__description {
+        font-size: $font-size-16;
+        font-weight: $font-weight-sm;
+        line-height: $line-height-22;
+        color: $custom-text-decr-color;
+
+        @media (max-width: $mobile-width-small) {
+            font-size: $font-size-12;
+            font-weight: 300;
+            line-height: $line-height-16;
         }
     }
 }
