--- a/src/routes/IndexPage/views/HeroSection/HeroSection.scss
+++ b/src/routes/IndexPage/views/HeroSection/HeroSection.scss
@@ -2,32 +2,71 @@
 
 .HeroSection {
     position: relative;
-    padding-top: 264px;
+    padding-top: 212px;
     padding-bottom: 351px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
+    overflow: hidden;
+
+    .Section__title,
+    .Section__description {
+        @media (max-width: $mobile-width-small) {
+            display: none;
+        }
+    }
+
+    @media (max-width: $tablet-width) {
+        padding-top: 105px;
+        padding-bottom: 157px;
+    }
+
+    @media (max-width: $tablet-width-small) {
+        padding-top: 72px;
+        padding-bottom: 131px;
+    }
+
+    @media (max-width: $mobile-width-small) {
+        padding-top: 24px;
+        padding-bottom: 32px;
+    }
 
     &__title {
-        margin-top: 21px;
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
-        margin-bottom: 28px;
+        margin-bottom: 30px;
         color: $custom-text-color;
 
+        @media (max-width: $mobile-width-small) {
+            margin-bottom: 26px;
+        }
+
         &-letters {
-            font-size: $font-size-96;
+            font-size: $font-size-80;
             font-weight: 700;
-            line-height: $line-height-112;
+            line-height: $line-height-96;
 
             &:first-child {
-                transform: translateX(-8px) translateY(1px);
+                transform: translateX(3px);
+
+                @media (max-width: 384px) {
+                    transform: translateX(-4px) translateY(2px);
+                }
             }
 
             &:last-child {
-                transform: translateX(7px) translateY(1px);
+                transform: translateX(-4px) translateY(1px);
+
+                @media (max-width: 384px) {
+                    transform: translateX(2px) translateY(2px);
+                }
+            }
+
+            @media (max-width: 384px) {
+                font-size: $font-size-48;
+                line-height: $line-height-60;
             }
         }
 
@@ -35,7 +74,14 @@
             width: 115px;
             height: 115px;
 
-            transform: scale(1.42) translateX(-9px) translateY(3px);
+            transform: scale(1.4) translateX(0px) translateY(4px);
+
+            @media (max-width: 384px) {
+                width: 60px;
+                height: 60px;
+                transform: scale(1.45) translateY(6px);
+            }
+
             svg {
                 width: 100%;
                 height: 100%;
@@ -49,18 +95,31 @@
         column-gap: 16px;
         margin-bottom: 64px;
 
+        @media (max-width: $mobile-width-small) {
+            column-gap: 8px;
+            margin-bottom: 24px;
+        }
+
         .ButtonView {
             width: 190px;
             height: 56px;
             padding: 12px;
 
+            @media (max-width: 400px) {
+                width: 148px;
+                height: 46px;
+            }
+
             &__text {
-                font-size: 18px;
-                font-family: Nunito;
+                font-size: $font-size-18;
                 white-space: nowrap;
                 font-style: normal;
-                font-weight: 400;
-                line-height: 24px;
+                font-weight: $font-weight-sm;
+                line-height: $line-height-24;
+
+                @media (max-width: $mobile-width-small) {
+                    font-size: $font-size-16;
+                }
             }
         }
     }
@@ -70,9 +129,22 @@
         text-align: center;
         color: $custom-text-color;
 
-
         font-size: $font-size-24;
         font-weight: $font-weight-sm;
         line-height: $line-height-34;
+
+        @media (max-width: $tablet-width) {
+            width: 87.5vw;
+        }
+
+        @media (max-width: $tablet-width-small) {
+            width: 95.83333333vw;
+        }
+
+        @media (max-width: 384px) {
+            font-size: $font-size-18;
+            line-height: $line-height-24;
+            width: 81.25vw;
+        }
     }
 }
