--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentPresent/ComponentPresent.scss
@@ -21,6 +21,20 @@
     align-items: center;
     justify-content: center;
 
+    @media (max-width: $tablet-width) {
+        width: 70.3125vw;
+        height: 450px;
+    }
+
+    @media (max-width: 800px) {
+        width: 100%;
+        height: 358px;
+    }
+
+    @media (max-width: $mobile-width-small){
+        height: 304px;
+    }
+
     &__themes {
         position: absolute;
         top: 24px;
@@ -33,7 +47,10 @@
             stroke: $custom-icon-color;
         }
 
-        .ButtonGroupView__button_active .IconView svg, path, rect, circle { 
+        .ButtonGroupView__button_active .IconView svg,
+        path,
+        rect,
+        circle {
             stroke: $custom-icon-active;
         }
     }
