--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentSelector/ComponentSelector.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentSelector/ComponentSelector.scss
@@ -3,21 +3,55 @@
 .ComponentSelector {
     display: flex;
     flex-flow: row nowrap;
-    column-gap: 24px;
+    gap: 24px;
+    transform: translateY(52px);
 
+    @media (max-width: $tablet-width) {
+        transform: translateY(-54px);
+    }
+
+    @media (max-width: 800px) {
+        transform: none;
+    }
+
+    @media (max-width: 800px) {
+        flex-flow: column;
+        gap: 22px;
+        align-items: center;
+    }
 
     &__decoration {
         left: -24px;
         width: 2px;
-        height: 140px;
+        height: 184px;
         background-color: $gray;
+
+        @media (max-width: $tablet-width) {
+            height: 136px;
+        }
+
+        @media (max-width: 800px) {
+            width: 300px;
+            height: 4px;
+            border-radius: 20px;
+        }
+
+        @media (max-width: 492px) {
+            width: 304px;
+        }
     }
 
     &__components {
         position: relative;
         flex-flow: column;
         background-color: transparent;
+        gap: 12px;
         padding: 0;
+
+        @media (max-width: 800px) {
+            flex-flow: row;
+            gap: 32px;
+        }
 
         .ButtonView .ButtonView__link .ButtonView__text {
             color: $custom-text-color;
@@ -25,6 +59,17 @@
             font-weight: $font-weight-sm;
             line-height: $line-height-34;
             position: relative;
+
+            @media (max-width: $tablet-width) {
+                font-size: $font-size-16;
+                line-height: $line-height-22;
+            }
+
+            @media (max-width: 800px) {
+                font-size: $font-size-24;
+                font-weight: 400;
+                line-height: $line-height-34;
+            }
 
             &::before {
                 display: block;
@@ -37,6 +82,18 @@
                 background-color: $primary;
                 opacity: 0;
                 transition: opacity 150ms ease-in-out;
+
+                @media (max-width: $tablet-width) {
+                    top: -10px;
+                }
+
+                @media (max-width: 800px) {
+                    width: 100%;
+                    height: 4px;
+                    top: -26px;
+                    left: 0px;
+                    border-radius: 4px;
+                }
             }
         }
 
