--- a/src/shared/Footer/Footer.scss
+++ b/src/shared/Footer/Footer.scss
@@ -1,12 +1,12 @@
 @import "style/variables";
 
-:root { 
-    --footer-background-color: #F8F8F8;
+:root {
+    --footer-background-color: #f8f8f8;
     --footer-separator-color: #f0f0f0;
 }
 
-html[data-theme="dark"] { 
-    --footer-background-color: #23232C;
+html[data-theme="dark"] {
+    --footer-background-color: #23232c;
     --footer-separator-color: transparent;
 }
 
@@ -18,6 +18,12 @@ $footer-separator-color: var(--footer-separator-color);
     font-weight: $font-weight-sm;
     line-height: $line-height-22;
     color: $custom-text-decr-color;
+
+    @media (max-width: 538px) {
+        font-family: Nunito Sans;
+        font-size: $font-size-14;
+        line-height: $line-height-18;
+    }
 }
 
 .Footer {
@@ -28,6 +34,14 @@ $footer-separator-color: var(--footer-separator-color);
     background: $footer-background-color;
     @extend %fontTemplate;
 
+    @media (max-width: $tablet-width) {
+        padding: 64px 16px 24px 16px;
+    }
+
+    @media (max-width: 538px) {
+        padding: 16px 16px 28px 16px;
+    }
+
     small {
         @extend %fontTemplate;
     }
@@ -35,6 +49,7 @@ $footer-separator-color: var(--footer-separator-color);
     &__link {
         .ButtonView__text {
             @extend %fontTemplate;
+            white-space: nowrap;
         }
     }
 
@@ -44,32 +59,108 @@ $footer-separator-color: var(--footer-separator-color);
         justify-content: space-between;
         padding-bottom: 192px;
 
+        @media (max-width: $tablet-width-small) {
+            padding-bottom: 122px;
+        }
+
+        @media (max-width: 538px) {
+            padding-bottom: 16px;
+        }
+
         &-left {
             width: 43.0729vw;
             display: flex;
             flex-flow: row nowrap;
 
+            @media (max-width: $tablet-width) {
+                width: 61.71875vw;
+                column-gap: 16px;
+            }
+
+            @media (max-width: 808px) {
+                display: grid;
+                grid-template-columns: repeat(2, 26.0416vw);
+                row-gap: 12px;
+                grid-template-areas:
+                    "a c"
+                    "b b";
+            }
+
+            @media (max-width: 538px) {
+                width: 100%;
+                row-gap: 8px;
+                grid-template-columns: repeat(2, 129px);
+                column-gap: 65px;
+            }
+
             #{$root}__column {
                 display: flex;
                 flex-flow: column nowrap;
                 row-gap: 12px;
+                width: 19.53125vw;
+
+                @media (max-width: 538px) {
+                    row-gap: 8px;
+                }
+
+                @media (max-width: 538px) {
+                    width: auto;
+                }
 
                 &:nth-child(1) {
-                    margin-right: 176px;
+                    margin-right: 8.3333vw;
+
+                    @media (max-width: $tablet-width) {
+                        margin-right: 0;
+                    }
+
+                    @media (max-width: 808px) {
+                        grid-area: a;
+                    }
                 }
                 &:nth-child(2) {
-                    margin-right: 234px;
+                    margin-right: 12.1875vw;
+                    @media (max-width: $tablet-width) {
+                        margin-right: 0;
+                    }
+
+                    @media (max-width: 808px) {
+                        grid-area: b;
+                    }
                 }
+                &:nth-child(3) {
+                    @media (max-width: 808px) {
+                        grid-area: c;
+                    }
+                }
+            }
+        }
+
+        &-right {
+            @media (max-width: 642px) {
+                display: none;
             }
         }
     }
 
     &__bottom {
         display: flex;
-        flex-flow: row nowrap;
+        flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
-        padding-top: 18px;
+        padding-top: 16px;
+
+        @media (max-width: $tablet-width) {
+            padding-top: 15px;
+            padding-left: 16px;
+            padding-right: 16px;
+        }
+
+        @media (max-width: 538px) {
+            flex-flow: column nowrap;
+            padding: 0;
+            align-items: flex-start;
+        }
 
         &-left {
             display: flex;
@@ -77,15 +168,54 @@ $footer-separator-color: var(--footer-separator-color);
             align-items: center;
 
             column-gap: 64px;
+
+            @media (max-width: 538px) {
+                flex-flow: column nowrap;
+                align-items: flex-start;
+                margin-top: 2px;
+
+                .Footer__link {
+                    order: 0;
+                    margin-bottom: 10px;
+                }
+
+                small {
+                    order: 1;
+
+                    font-size: $font-size-12;
+                    font-weight: 300;
+                }
+            }
+        }
+
+        &-right {
+            font-size: $font-size-18;
+            font-weight: $font-weight-sm;
+            line-height: $line-height-22;
+
+            @media (max-width: 538px) {
+                font-size: $font-size-12;
+                font-weight: 300;
+                line-height: $line-height-16;
+            }
         }
     }
 
-    &__separator { 
+    &__separator {
         position: absolute;
         bottom: 64px;
         left: 0;
         width: 100%;
         height: 1px;
         background-color: $footer-separator-color;
+
+        @media (max-width: 711px) {
+            margin-bottom: 10px;
+        }
+
+        @media (max-width: 538px){
+              margin-bottom: 0;
+              bottom: 98px;
+        }
     }
 }
