--- a/src/style/customVariables/typography.scss
+++ b/src/style/customVariables/typography.scss
@@ -1,4 +1,5 @@
 $font-size-12: 0.75rem;
+$font-size-14: 0.875rem;
 $font-size-16: 1rem;
 $font-size-18: 1.125rem;
 $font-size-20: 1.25rem;
@@ -7,6 +8,7 @@ $font-size-32: 2rem;
 $font-size-48: 3rem;
 $font-size-50: 3.125rem;
 $font-size-64: 4rem;
+$font-size-80: 5rem;
 $font-size-96: 6rem;
 
 $line-height-16: 1rem;
@@ -21,7 +23,9 @@ $line-height-32: 2rem;
 $line-height-38: 2.375rem;
 $line-height-40: 2.5rem;
 $line-height-54: 3.375rem;
+$line-height-60: 3.75rem;
 $line-height-57: 3.5625rem;
 $line-height-72: 4.5rem;
+$line-height-96: 6rem;
 $line-height-104: 6.5rem;
 $line-height-112: 7rem;
