--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentOptions/ComponentOptions.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentOptions/ComponentOptions.scss
@@ -12,7 +12,7 @@
         margin-bottom: 8px;
     }
 
-    &__sizes { 
-        width: 261px;
+    &__btn-groups { 
+        // width: 261px;
     }
 }
