--- a/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
+++ b/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
@@ -26,20 +26,37 @@
         line-height: $line-height-34;
     }
 
+    &__img-wrapper {
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
     &:nth-child(3) {
         #{$root}__img-wrapper {
+            width: 396.382px;
+            height: 320px;
+
             margin-top: 67px;
         }
     }
 
     &:nth-child(4) {
         #{$root}__img-wrapper {
+            width: 262.545px;
+            height: 380px;
+
             margin-top: 38px;
         }
     }
 
     &:nth-child(5) {
         #{$root}__img-wrapper {
+            width: 300px;
+            height: 95.207px;
+
             margin-top: 151px;
         }
     }
@@ -62,7 +79,7 @@
             margin-bottom: 0;
         }
 
-        .ButtonView { 
+        .ButtonView {
             width: 190px;
         }
     }
