--- a/src/routes/IndexPage/views/HeroSection/HeroSection.scss
+++ b/src/routes/IndexPage/views/HeroSection/HeroSection.scss
@@ -9,38 +9,7 @@
     flex-wrap: nowrap;
     align-items: center;
 
-    &__title {
-        margin-top: 21px;
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        margin-bottom: 28px;
-
-        &-letters {
-            font-size: $font-size-96;
-            font-weight: 700;
-            line-height: $line-height-112;
-
-            &:first-child {
-                transform: translateX(-8px) translateY(1px);
-            }
-
-            &:last-child {
-                transform: translateX(7px) translateY(1px);
-            }
-        }
-
-        &-icon {
-            width: 115px;
-            height: 115px;
-
-            transform: scale(1.42) translateX(-9px) translateY(3px);
-            svg {
-                width: 100%;
-                height: 100%;
-            }
-        }
-    }
+    
 
     &__buttons {
         display: flex;
@@ -66,6 +35,7 @@
 
     &__description {
         width: 46.66vw;
+        margin-bottom: 0;
         text-align: center;
 
         font-size: $font-size-24;
