--- a/src/shared/Header/views/LanguagesDropDown/LanguagesDropDown.scss
+++ b/src/shared/Header/views/LanguagesDropDown/LanguagesDropDown.scss
@@ -1,6 +1,6 @@
 @import "style/variables";
 
-.CustomDropDown {
+.LanguagesDropDown {
     width: 59px !important;
     min-width: auto;
     border-radius: 12px;
