Added few hooks, updated versions

--- a/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
@@ -52,4 +52,14 @@
     &__props {
         grid-area: b;
     }
+
+    &__trigger { 
+        position: fixed;
+        top: 1.5%;
+        left: 0;
+        width: 100%;
+        background-color: black;
+        pointer-events: none;
+        height: 1px;
+    }
 }
