Some lint fixes

--- a/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
@@ -58,7 +58,7 @@
         top: 1.5%;
         left: 0;
         width: 100%;
-        background-color: black;
+        background-color: transparent;
         pointer-events: none;
         height: 1px;
     }
