--- a/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
@@ -8,48 +8,18 @@
             "a"
             "b";
 
-        &-wrapper {
+        .ComponentDescription {
             grid-area: a;
             display: grid;
             grid-template-areas: "c j";
         }
     }
 
-    &__text {
-        margin-bottom: 40px;
-    }
-
-    &__description {
-        max-width: 790px;
-    }
-
     &__demos {
         grid-area: c;
     }
 
-    &__navigation {
-        position: sticky;
-        top: 32px;
-        height: fit-content;
-        margin-left: auto;
-        grid-area: j;
-        transform: translateX(-2px);
-
-        .ButtonView .ButtonView__link .ButtonView__text {
-            font-size: $font-size-16;
-            font-weight: $font-weight-sm;
-            line-height: $line-height-22;
-
-            &::before {
-                height: 100%;
-                top: 0;
-                left: 0;
-                left: -24px;
-            }
-        }
-    }
-
-    &__props {
+    .ComponentPropsInfo {
         grid-area: b;
     }
 
@@ -61,5 +31,9 @@
         background-color: transparent;
         pointer-events: none;
         height: 1px;
+    }
+
+    &__tabs { 
+        margin: 44px 0px 40px 84px;
     }
 }
