Added sidebar demo, updated versions

--- a/src/ui/index.scss
+++ b/src/ui/index.scss
@@ -60,6 +60,7 @@
 @import '@steroidsjs/bootstrap/layout/ProgressBar/LineProgressBarView';
 @import '@steroidsjs/bootstrap/layout/ProgressBar/CircleProgressBarView';
 @import '@steroidsjs/bootstrap/layout/Skeleton/SkeletonView';
+@import '@steroidsjs/bootstrap/layout/Sidebar/SidebarView';
 @import '@steroidsjs/bootstrap/list/ControlsColumnView/ControlsColumnView';
 @import '@steroidsjs/bootstrap/list/CheckboxColumn/CheckboxColumnView';
 @import '@steroidsjs/bootstrap/list/Empty/EmptyView';
