--- a/src/routes/DocsPage/views/UiComponentInfo/views/ComponentPropsInfo/ComponentPropsInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/ComponentPropsInfo/ComponentPropsInfo.scss
@@ -1,5 +1,14 @@
-@import 'style/variables';
+@import "style/variables";
 
 .ComponentPropsInfo {
+    .GridView__table {
+        max-width: 672px;
+        width: 30px;
 
+        td {
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            white-space: normal;
+        }
+    }
 }
