--- a/src/routes/DocsPage/views/ApiTable/ApiTable.scss
+++ b/src/routes/DocsPage/views/ApiTable/ApiTable.scss
@@ -1,25 +1,26 @@
-@import 'style/variables';
+@import "style/variables";
 
 .ApiTable {
-  padding-top: 30px;
-  
-  &__type {
-    min-width: 200px;
-    code, a {
-      color: #932981;
+    padding-top: 30px;
+
+    &__type {
+        min-width: 200px;
+        code,
+        a {
+            color: #932981;
+        }
     }
-  }
 
-  &__name {
-    min-width: 200px;
-  }
+    &__name {
+        min-width: 200px;
+    }
 
-  &__default {
-    min-width: 150px;
-  }
+    &__default {
+        min-width: 150px;
+    }
 
-  a:hover,
-  .ButtonView__link:hover {
-    text-decoration: underline;
-  }
+    a:hover,
+    .ButtonView__link:hover {
+        text-decoration: underline;
+    }
 }
