--- a/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
@@ -2,11 +2,23 @@
 
 .UiComponentInfo {
     &__content {
-        padding: 44px 84px;
+        padding: 0 158px 0 80px;
         display: grid;
         grid-template-areas:
             "a"
             "b";
+
+        @media (max-width: 1600px) {
+            padding: 0 80px 0px 80px;
+        }
+
+        @media (max-width: $tablet-width) {
+            padding: 0 24px;
+        }
+
+        @media (max-width: $tablet-width-small) {
+            padding: 0 12px;
+        }
 
         .ComponentDescription {
             grid-area: a;
@@ -23,7 +35,7 @@
         grid-area: b;
     }
 
-    &__trigger { 
+    &__trigger {
         position: fixed;
         top: 1.5%;
         left: 0;
@@ -33,7 +45,19 @@
         height: 1px;
     }
 
-    &__tabs { 
+    &__tabs {
         margin: 44px 0px 40px 84px;
+
+        @media (max-width: $tablet-width) {
+            margin: 32px 0 32px 24px;
+        }
+
+        @media (max-width: $tablet-width-small) {
+            margin: 32px 0 32px 12px;
+        }
+
+        @media (max-width: $mobile-width) {
+            margin: 32px auto;
+        }
     }
 }
