--- a/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
@@ -1,12 +1,47 @@
-@import 'style/variables';
+@import "style/variables";
 
 .Banner {
-  padding: 80px;
-  background-color: #333646;
-  height: 300px;
+    padding: 80px;
+    background-color: #333646;
+    height: 300px;
 
-  &__title {
-    font-size: 96px;
-    color: $white;
-  }
+    @media (max-width: $tablet-width) {
+        padding: 50px 40px;
+        height: 240px;
+    }
+
+    @media (max-width: $mobile-width) {
+        font-size: $font-size-32;
+        font-weight: $font-weight-lg;
+        line-height: $line-height-40;
+
+        padding: 34px 24px;
+        height: 180px;
+    }
+
+    &__title {
+        font-size: 96px;
+        color: $white;
+        margin-bottom: 0;
+
+        font-size: $font-size-80;
+        font-weight: $font-weight-lg;
+        line-height: $line-height-96;
+
+        white-space: nowrap; /* Запретить перенос текста */
+        overflow: hidden; /* Скрыть содержимое, выходящее за границы ячейки */
+        text-overflow: ellipsis; /* Добавить многоточие, если текст обрезается */
+
+        @media (max-width: $tablet-width) {
+            font-size: $font-size-64;
+            font-weight: $font-weight-lg;
+            line-height: $line-height-80;
+        }
+
+        @media (max-width: $mobile-width) {
+            font-size: $font-size-32;
+            font-weight: $font-weight-lg;
+            line-height: $line-height-40;
+        }
+    }
 }
