--- a/src/style/customVariables/typography.scss
+++ b/src/style/customVariables/typography.scss
@@ -26,6 +26,7 @@ $line-height-54: 3.375rem;
 $line-height-60: 3.75rem;
 $line-height-57: 3.5625rem;
 $line-height-72: 4.5rem;
+$line-height-80: 5rem;
 $line-height-96: 6rem;
 $line-height-104: 6.5rem;
 $line-height-112: 7rem;
