Review code changes

--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -28,7 +28,7 @@ $control-background-color: var(--control-background-color);
     }
 
     &__nav {
-        &-list {
+        .NavLinkView__list {
             display: flex;
             gap: 90px;
 
