Review code changes for previous commits

--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentPicker/ComponentPicker.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentPicker/ComponentPicker.scss
@@ -1,6 +1,6 @@
 @import "style/variables";
 
-.ComponentSelector {
+.ComponentPicker {
     transform: translateY(44px) translateX(24px);
 
     @media (max-width: $tablet-width) {
