--- a/src/shared/DemosNavigation/DemosNavigation.scss
+++ b/src/shared/DemosNavigation/DemosNavigation.scss
@@ -1,6 +1,6 @@
 @import "style/variables";
 
-.Selector {
+.DemosNavigation {
     position: relative;
     display: flex;
     flex-flow: row nowrap;
