Review code changes

--- a/src/shared/DemosNavigation/CustomNavigation.scss
+++ b/src/shared/DemosNavigation/CustomNavigation.scss
@@ -1,6 +1,6 @@
 @import "style/variables";
 
-.DemosNavigation {
+.CustomNavigation {
     position: relative;
     display: flex;
     flex-flow: row nowrap;
